Fixed Fluid S font size's name, changed latest posts list pattern's list font size to Fluid S, removed excessive gap

--- a/assets/css/blocks/group.css
+++ b/assets/css/blocks/group.css
@@ -14,7 +14,6 @@
 
 .kide-latest-list-stack {
   display: grid;
-  gap: var(--wp--preset--spacing--20);
 }
 
 
